# octodns-metaname

./: .gitignore  Agents.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/octodns_metaname/: __init__.py  client.py  secrets.py  testing_resolver.py
src/octodns_metaname.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/octodns_metaname/tests/: __init__.py
tests/: test_client.py  test_provider.py  test_secrets.py
