[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octodns-metaname"
version = "0.1.1"
description = "OpsDev.nz OctoDNS provider for the Metaname DNS API"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "OpsDev.nz Platform Engineering", email = "john@opsdev.nz" },
]
maintainers = [
  { name = "OpsDev.nz Platform Engineering", email = "john@opsdev.nz" },
]
keywords = ["octodns", "metaname", "dns", "opsdevnz"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Internet :: Name Service (DNS)",
]
dependencies = [
  "octodns>=1.5,<2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.12.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.5",
  "twine>=5.1.1",
  "vcrpy>=6.0.1",
  "types-requests>=2.31.0.20240218",
]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
onepassword = [
  "op-opsdevnz>=0.1.4",
]

[project.entry-points."octodns.providers"]
metaname = "octodns_metaname:MetanameProvider"

[project.urls]
Homepage = "https://github.com/startmeup-nz/octodns-metaname"
Source = "https://github.com/startmeup-nz/octodns-metaname"
Issues = "https://github.com/startmeup-nz/octodns-metaname/issues"

[tool.pytest.ini_options]
addopts = "--color=yes --durations=10"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
namespace_packages = true
packages = ["octodns_metaname"]

[tool.setuptools.packages.find]
where = ["src"]
